--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,15 +1,26 @@
-
-<div class="container">
-  <div class="text-center">
-    <h1>my projects</h1>
-  </div>
-  <div class="cards-container col-xs-12 col-sm-9">
-      <% @projects.each do |project| %>
-        <%= render "shared/card", project: project %>
+<!-- <div class="container">
+  <div class="navbar-wagon" style="text-align: center">
+    <h1> dashboard — my projects </h1>
+  </div> -->
+  <div class="container">
+    <div class="row">
+      <% @current_user.projects.each do |project| %>
+        <div class="col-xs-12 col-sm-4">
+          <%= link_to project_path(project) do %>
+          <div class="card project-card" style="background-image: url('<%= cl_image_path project.cover.path rescue "" %>')">
+            <div class="card-category"></div>
+            <div class="card-description">
+              <h2><%= project.title %></h2>
+              <p><%= project.description %></p>
+            </div>
+            <% project.contributors.each do |user| %>
+              <%= cl_image_tag user.photo.path, class: "avatar"%>
+            <% end %>
+            </div>
+          <% end %>
+        </div>
       <% end %>
+    </div>
   </div>
-</div>
-
-
-
-
+<!-- </div>
+ -->
