Fixed mobile links to allow users to utilize app on the mobile

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -55,9 +55,26 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">mobile link 1</a></li>
-        <li><a href="#">mobile link 2</a></li>
-        <li><a href="#">mobile link 3</a></li>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to "dashboard", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          </li>
+          <li>
+            <%= link_to "start a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "sign out") %>
+            <% end %>
+          </li>
+          <% else %>
+            <li>
+              <%= link_to t(".sign_in", default: "log in"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+            </li>
+            <li>
+              <%= link_to t(".sign_in", default: "sign up"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+            </li>
+        <% end %>
       </ul>
     </div>
   </div>
