--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -25,7 +25,7 @@
 
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background-color: gray !important;
+  background-color: white;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -37,6 +37,11 @@
   color: black !important;
   text-decoration: none !important;
   }
+}
+
+.dashboard-container {
+  max-width: 900px;
+  margin: 50px auto;
 }
 
 .card {
@@ -72,14 +77,14 @@
 }
 .card-description {
   position: absolute;
-  bottom: 10px;
+  top: 10px;
   left: 10px;
 }
 .card-description h2 {
-  font-size: 24px;
+  font-size: 22px;
 }
 .card-description p {
-  font-size: 14px;
+  font-size: 12px;
   opacity: 0.7;
   font-weight: lighter;
 }
@@ -95,4 +100,52 @@
 }
 .card-link:hover {
   opacity: 0.1;
+}
+
+.dashboard-tabs {
+  display: flex;
+}
+.dashboard-tab {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  opacity: 0.3;
+  border-bottom: 5px solid transparent;
+  text-decoration: none;
+  color: gray;
+}
+.dashboard-tab:hover {
+  opacity: 1;
+}
+.dashboard-tab.active {
+  opacity: 1;
+  font-size: 18px;
+  font-family: $regular-font;
+  padding: 5px;
+  border-bottom: 5px solid #00A699;
+}
+
+.tabs {
+  display: flex;
+  align-items: center;
+}
+
+.tab {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  opacity: 0.3;
+  border-bottom: 5px solid transparent;
+  text-decoration: none;
+  color: black;
+}
+.tab:hover {
+  opacity: 1;
+}
+.tab.active {
+  opacity: 1;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  border-bottom: 5px solid #00A699;
 }
