--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,7 +18,7 @@
               <p> <%=project.start_date%> - <%=project.end_date%> </p>
             </div>
             <% project.contributors.each do |user| %>
-              <%= cl_image_tag user.photo.path, class: "avatar"%>
+              <%= cl_image_tag user.photo.path, class: "avatar" rescue "" %>
             <% end %>
             </div>
           <% end %>
@@ -39,14 +39,14 @@
       <% @current_user.projects.each do |project| %>
         <div class="col-xs-12 col-sm-3">
           <%= link_to project_path(project) do %>
-          <div class="card project-card" style="background-image: url('<%= cl_image_path project.cover.path rescue "" %>')">
+          <div class="card project-card" style="background-image: url('<%= cl_image_path project.cover.path rescue ""%>')">
             <div class="card-category"></div>
             <div class="card-description">
               <h2> <%= project.title %> </h2>
               <p> <%=project.start_date%> - <%=project.end_date%> </p>
             </div>
             <% project.contributors.each do |user| %>
-              <%= cl_image_tag user.photo.path, class: "avatar"%>
+              <%= cl_image_tag user.photo.path, class: "avatar" rescue "" %>
             <% end %>
             </div>
           <% end %>
