--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -42,4 +42,5 @@
 <%= form_tag specialties_gantt_update_path(@project), method: :patch, remote: true, id: "hidden_gantt_form" do %>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :tasks, "", id: "gnatt_tasks_input"  %>
+  <%= hidden_field_tag :task_changed, "", id: "task_changed_id"  %>
 <% end %>
