--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="new-project-form">
+    <div class="form-style">
         <%= render "form" %>
     </div>
   </div>
