--- a/app/views/specialties/new.html.erb
+++ b/app/views/specialties/new.html.erb
@@ -1,3 +1,7 @@
-<div class="container col-xs-6">
-  <%= render "form" %>
+ <div class="container-fluid centered">
+  <div class="row">
+    <div class="form-style">
+      <%= render "form" %>
+    </div>
+  </div>
 </div>
