--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -36,17 +36,17 @@
   </div>
   <div class="container">
     <div class="row">
-      <% @current_user.projects.each do |project| %>
+      <% @project_specialty_tasks.each do |task| %>
         <div class="col-xs-12 col-sm-3">
           <%= link_to project_path(project) do %>
           <div class="card project-card" style="background-image: url('<%= cl_image_path project.cover.path rescue "" %>')">
             <div class="card-category"></div>
             <div class="card-description">
-              <h2> <%= project.title %> </h2>
-              <p> <%=project.start_date%> - <%=project.end_date%> </p>
+              <h2> <%= task.name %> </h2>
+              <p> <%= project.title %> </p>
             </div>
-            <% project.contributors.each do |user| %>
-              <%= cl_image_tag user.photo.path, class: "avatar"%>
+            <% tasks.each do |task| %>
+              <%= cl_image_tag project.cover.path, class: "avatar"%>
             <% end %>
             </div>
           <% end %>
