fixed titles on New Project, Edit project and Add Specialty pages to be more uniform across the app

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>edit: <%= @project.title %></h2>
+  <h1>Edit: <%= @project.title %></h1>
   <%= render 'form' %>
   <%= link_to '<— take me back', projects_path %>
 </div>
