--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,15 +1,8 @@
 .form-inputs {
   background: white;
-  margin-top: 50px;
+  margin-top: 20px;
   padding: 20px;
   border-radius: 5px;
-  h1 {
-    text-align: center;
-    font-weight: bold;
-    font-size: 24px;
-    color: #666666;
-    margin-bottom: 30px;
-  }
   h2 {
     text-align: left;
     font-weight: bold;
@@ -23,6 +16,15 @@
     font-weight: bold;
   }
 }
+
+ h1 {
+    font-family: Raleway, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 24px;
+    color: #666666;
+    margin-bottom: 30px;
+  }
 
 .generator {
   border-color: #666666;;
@@ -87,4 +89,8 @@ abbr {
 .dropdown-menu {
   background: #b7b7b7;
   opacity: 1;
+}
+
+.btn-default.dropdown-toggle {
+    background-color: #e6e6e6;
 }
