--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="form-style">
+        <h1>Add a Project</h1>
         <%= render "form" %>
     </div>
   </div>
