--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,32 @@
+.nav-card{
+  border: solid 0.5px rgba(151, 151, 151, 0.25);
+  padding: 5px;
+  height: 110px;
+  position: relative;
+}
+
+.card-title {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+}
+
+.card-title h2 {
+  font-size: 18px;
+  margin: 0;
+}
+
+.card-title p {
+  font-size: 14px;
+  opacity: 0.7;
+}
+
+.card-avatars {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
 .card {
   height: 175px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
@@ -6,6 +35,7 @@
   color: white;
   position: relative;
 }
+
 .card-user {
   position: absolute;
   right: 10px;
@@ -24,6 +54,7 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
+
 }
 .card-description h2 {
   font-size: 24px;
