added reviews to bottom of homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,7 +40,69 @@
       </div>
     </div>
   </div>
-</div>
+
+  <div class="banner-content">
+    <div class="text-center" style="color: black" width="100">
+      <h1> Tried and True </h1>
+      <h3> we're not shy. check out the buzz: </h3>
+    </div>
+  </div>
+  <div class="container" style="background-color: #9697AA">
+    <div class="product">
+      <div class='product-upvote'></div>
+      <img src='https://kitt.lewagon.com/placeholder/users/alex-felix' class="product-image"/>
+      <div class='product-body'>
+        <h3>Fantastic app!</h3>
+        <p>Gets the job done day in and day out!</p>
+      </div>
+      <ul class="list-inline product-controls">
+        <li><a href=""><i class="fa fa-heart"></i></a>36</li>
+        <li><a href=""><i class="fa fa-share"></i></a>15</li>
+        <li><a href=""><i class="fa fa-star"></i></a>5</li>
+      </ul>
+    </div>
+    <div class="product">
+      <div class='product-upvote'></div>
+      <img src='https://kitt.lewagon.com/placeholder/users/ssaunier' class="product-image"/>
+      <div class='product-body'>
+        <h3>Hands down, the best...</h3>
+        <p>Wish I knew about this sooner!</p>
+      </div>
+      <ul class="list-inline product-controls">
+        <li><a href=""><i class="fa fa-heart"></i></a>45</li>
+        <li><a href=""><i class="fa fa-share"></i></a>17</li>
+        <li><a href=""><i class="fa fa-star"></i></a>5</li>
+      </ul>
+    </div>
+    <div class="product">
+      <div class='product-upvote'></div>
+      <img src='https://kitt.lewagon.com/placeholder/users/eschults' class="product-image"/>
+      <div class='product-body'>
+        <h3>Always with me</h3>
+        <p>In the car, office, with clients...</p>
+      </div>
+      <ul class="list-inline product-controls">
+        <li><a href=""><i class="fa fa-heart"></i></a>98</li>
+        <li><a href=""><i class="fa fa-share"></i></a>28</li>
+        <li><a href=""><i class="fa fa-star"></i></a>5</li>
+      </ul>
+    </div>
+    <div class="product">
+      <div class='product-upvote'></div>
+      <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="product-image"/>
+      <div class='product-body'>
+        <h3>Instant winning</h3>
+        <p>Has my business for life. Closing deals...</p>
+      </div>
+        <ul class="list-inline product-controls">
+          <li><a href=""><i class="fa fa-heart"></i></a>23</li>
+          <li><a href=""><i class="fa fa-share"></i></a>71</li>
+          <li><a href=""><i class="fa fa-star"></i></a>5</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
 
 
 
