getting closer to mockup

--- a/app/views/shared/_navcard_specialties.html.erb
+++ b/app/views/shared/_navcard_specialties.html.erb
@@ -1,8 +1,8 @@
 <% @specialties.each do |s| %>
   <div class="nav-card">
     <div class="card-title">
-      <h2><%= link_to "#{s.name.upcase}" , project_specialty_path( @project, s) %></h2>
-      <p><%= s.start.strftime("%Y-%m-%d") %> - <%= s.finish.strftime("%Y-%m-%d") %></p>
+      <h2><%= link_to "#{s.name.upcase}", project_specialty_path(@project,s) %></h2>
+      <p><%= s.start.strftime("%Y %b %d") %>  <%= s.finish.strftime("%Y %b %d") %></p>
     </div>
     <div class="card-avatars">
       <ul class="list-inline">
@@ -22,10 +22,9 @@
         <% end %>
       </ul>
     </div>
-    <a class="card-link" href="#" ></a>
   </div>
 <% end %>
-<div class="nav-card">
-  <%= link_to "", new_project_specialty_path(@project), class:"fa fa-plus" %>
+ <div class="add-card">
+  <span><%= link_to "", new_project_specialty_path(@project), class:"fa fa-plus" %></span>
 </div>
 
