--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,10 @@
 .nav-card{
-  border: solid 0.5px rgba(151, 151, 151, 0.25);
+  border: solid 0.3px rgba(151, 151, 151, 0.25);
+  box-shadow: 0px 2px 20px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   padding: 5px;
   height: 110px;
   position: relative;
+  margin-bottom: 5px;
 }
 
 .card-title {
@@ -17,14 +19,27 @@
 }
 
 .card-title p {
-  font-size: 14px;
+  font-size: 12px;
   opacity: 0.7;
 }
 
 .card-avatars {
   position: absolute;
   bottom: 0;
-  right: 0;
+  right: 5px;
+}
+
+.add-card{
+  background-color: rgba(151, 151, 151, 0.25);
+  padding: 5px;
+  height: 110px;
+  position: relative;
+  text-align: center;
+  span {
+    line-height: 110px;
+    vertical-align: middle;
+    font-size: 24px;
+  }
 }
 
 .card {
