--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,7 +18,7 @@
               <p> <%=project.start_date%> - <%=project.end_date%> </p>
             </div>
             <% project.contributors.each do |user| %>
-              <%= cl_image_tag user.photo.path, class: "avatar"%>
+              <%= cl_image_tag user.photo, class: "avatar"%>
             <% end %>
             </div>
           <% end %>
@@ -36,7 +36,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <% @project_specialty_tasks.each do |task| %>
+      <% @project.specialty.tasks.each(@project, @specialty, @tasks) do |task| %>
         <div class="col-xs-12 col-sm-3">
           <%= link_to project_path(project) do %>
           <div class="card project-card" style="background-image: url('<%= cl_image_path project.cover.path rescue "" %>')">
