--- a/app/views/specialties/_form.html.erb
+++ b/app/views/specialties/_form.html.erb
@@ -14,12 +14,11 @@
         <%= f.input :name, input_html: { placeholder: "Plumbing, painting, electricity...", class: 'form-control' } %>
         <%= f.input :progress, input_html: { placeholder: " 35 (for 35%)  ", class: 'form-control' } %>
         <%= f.input :custom_class, collection: [ "blue", "red", "green", "orange", "grey", "brown", "violet", "yellow", "pink"], input_html: {  class: 'form-control' } %>
-
-        <%= f.input :start, as: :datetime, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
-        <%= f.input :finish, as: :datetime, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
+        <%= f.input :start, as: :string, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
+        <%= f.input :finish, as: :string, input_html: { id: "end_date", placeholder: "", class: 'form-control datepicker' } %>
         <div class="button-group" style="position: relative;">
           <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
-              Dependencies
+              Add Dependencies
           </button>
           <ul class="dropdown-menu">
             <% Specialty.where("project_id = ? AND id != ?", @project.id, (@specialty.id || 9999)).each do |specialty| %>
@@ -35,27 +34,34 @@
 <% end %>
 <%= content_for :after_js do %>
   <script>
-    var options = [];
+    $(document).ready(function(){
+      var options = [];
 
-    $('.dropdown-menu a').on('click', function( event ) {
+      $('.dropdown-menu a').on('click', function( event ) {
 
-      var $target = $(event.currentTarget),
-        val = $target.attr( 'data-value' ),
-        $inp = $target.find( 'input' ),
-        idx;
+        var $target = $(event.currentTarget),
+          val = $target.attr( 'data-value' ),
+          $inp = $target.find( 'input' ),
+          idx;
 
-      if ((idx = options.indexOf(val)) > -1) {
-          options.splice( idx, 1 );
-          setTimeout( function() { $inp.prop( 'checked', false ) }, 0);
-      } else {
-          options.push( val );
-          setTimeout( function() { $inp.prop( 'checked', true ) }, 0);
-      }
+        if ((idx = options.indexOf(val)) > -1) {
+            options.splice( idx, 1 );
+            setTimeout( function() { $inp.prop( 'checked', false ) }, 0);
+        } else {
+            options.push( val );
+            setTimeout( function() { $inp.prop( 'checked', true ) }, 0);
+        }
 
-      $( event.target ).blur();
+        $( event.target ).blur();
 
-      console.log( options );
-      return false;
+        console.log( options );
+        return false;
+      });
+
+
+      $('.datepicker').datepicker({
+        format: 'dd/mm/yyyy'
+      });
     });
   </script>
 <% end %>
