--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -63,10 +63,12 @@
   font-size: 14px !important;
   line-height: 22px !important;
   padding: 10px 20px;
+  opacity: 1.0;
 }
 .navbar-wagon-dropdown-menu li > a:hover {
   background: transparent !important;
   color: black !important;
+  opacity: 1.0;
 }
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
@@ -85,4 +87,7 @@
   right: 0;
   left: 0;
   z-index: 1030;
+}
+#dropdown {
+  background-color: white;
 }
