--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
-        <div class="dropdown">
+        <div id="dropdown">
           <% if current_user.facebook_picture_url? %>
             <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
           <% elsif  current_user.photo.nil? %>
