Created an id to isolate dependency button behavior

--- a/app/views/specialties/_form.html.erb
+++ b/app/views/specialties/_form.html.erb
@@ -21,7 +21,7 @@
           <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
               Dependencies
           </button>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu", id="dependency-dropdown-menu">
             <% Specialty.where("project_id = ? AND id != ?", @project.id, (@specialty.id || 9999)).each do |specialty| %>
               <li><a href="#" class="small" data-value="<%= specialty.id %>" tabIndex="-1"><input name="<%= specialty.id %>" type="checkbox"/> <%= specialty.name %></a></li>
             <% end %>
