styled back link to be more consistent with styling

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Edit: <%= @project.title %></h1>
   <%= render 'form' %>
-  <%= link_to '<— take me back', projects_path %>
+  <%= link_to 'return to dashboard', projects_path %>
 </div>
 
