--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -38,14 +38,14 @@
   </div>
   <div class="container">
     <div class="row">
-      <% @project.specialty.tasks.each(@project, @specialty, @tasks) do |task| %>
+      <% @tasks.each do |task| %>
         <div class="col-xs-12 col-sm-3">
           <%= link_to project_path(project) do %>
           <div class="card project-card" style="background-image: url('<%= cl_image_path project.cover.path rescue ""%>')">
             <div class="card-category"></div>
             <div class="card-description">
               <h2> <%= task.name %> </h2>
-              <p> <%= project.title %> </p>
+              <p> <%= task.specialty.project.title %> </p>
             </div>
 
             <% project.contributors.each do |user| %>
