--- a/app/assets/stylesheets/pages/_show_project.scss
+++ b/app/assets/stylesheets/pages/_show_project.scss
@@ -6,6 +6,7 @@
 
 .head-section h1 {
   text-align: left;
+  font-family: $light-font;
   font-style: italic;
   letter-spacing: 0.75px;
   margin-bottom: 10px;
