--- a/app/views/shared/_navcard_tasks.html.erb
+++ b/app/views/shared/_navcard_tasks.html.erb
@@ -2,10 +2,9 @@
   <div class="card">
     <div class="card-description">
       <p><%= link_to "#{t.name}" , project_specialty_task_path( @project, @specialty, t) %></p>
-      <p><%= t.start.strftime("%Y-%m-%d") %> - <%= t.finish.strftime("%Y-%m-%d") %></p>
+      <p><%= t.start.strftime("%Y %b %d") %> - <%= t.finish.strftime("%Y %b %d") %></p>
     </div>
     <img class="card-user" src="#">
-    <a class="card-link" href="#" ></a>
   </div>
 <% end %>
 
