--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,8 +3,8 @@
     <div class="col-xs-12 head-section">
       <h1> <%= @project.title.upcase %> <%= link_to "", edit_project_path(@project), class:"fa fa-pencil" %> <%= link_to "", @project, class:'fa fa-trash', method: :delete %></h1>
       <p>
-        <span><%= @project.start_date.strftime("%Y %b %d") %></span> to
-        <span><%= @project.end_date.strftime("%Y %b %d") %></span>
+        <span><%= @project.start_date.strftime("%d %b %Y ") %></span> -
+        <span><%= @project.end_date.strftime("%d %b %Y ") %></span>
       </p>
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
