--- a/app/views/shared/_navcard_specialties.html.erb
+++ b/app/views/shared/_navcard_specialties.html.erb
@@ -2,7 +2,7 @@
   <div class="nav-card">
     <div class="card-title">
       <h2><%= link_to "#{s.name.upcase}", project_specialty_path(@project,s) %></h2>
-      <p><%= s.start.strftime("%Y %b %d") %>  <%= s.finish.strftime("%Y %b %d") %></p>
+      <p><%= s.start.strftime("%Y %b %d") %> - <%= s.finish.strftime("%Y %b %d") %></p>
     </div>
     <div class="card-avatars">
       <%= render 'shared/contributor_list', tasks: s.tasks %>
