Updated Case and deleted uneccessary punctuation, added margin between buttons

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -14,6 +14,7 @@
     width: 100%;
     padding: 10px;
     font-weight: bold;
+    margin-bottom: 20px;
   }
 }
 
@@ -63,7 +64,7 @@
 }
 
 .form-actions {
-  //margin: 20px;
+  // margin: 20px;
 }
 
 abbr {
