--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Edit: <%= @project.title %></h1>
+  <h1>Edit <%= @project.title %></h1>
   <%= render 'form' %>
   <%= link_to 'return to dashboard', projects_path %>
 </div>
