--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo.png" %>
-    <span style="padding-left: 10px;">Active Blueprint</span>
+    <span style="padding-left: 10px;"><i>Active</i> Blueprint</span>
   <% end %>
 
   <!-- Right Navigation -->
