--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.input :budget, input_html: { placeholder: "", class: 'form-control' } %>
     <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
     <%= f.input :progress, input_html: { placeholder: " 35 (for 35%) -->minimum: 5  ", class: 'form-control' } %>
-    <%= f.input :start, input_html: { placeholder: "", class: 'form-control' } %>
-    <%= f.input :finish, input_html: { placeholder: "", class: 'form-control' } %>
+            <%= f.input :start, as: :string, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
+        <%= f.input :finish, as: :string, input_html: { id: "end_date", placeholder: "", class: 'form-control datepicker' } %>
     <%= f.select :user, options_for_select(User.all.to_a.map { |obj| [obj['username'], obj['id']] }) %>
   </div>
   <div class="form-actions">
@@ -25,3 +25,12 @@
   </div>
 <% end %>
 
+<% content_for(:after_js) do %>
+  <script type="text/javascript">
+    $(document).ready(function(){
+        $('.datepicker').datepicker({
+          format: 'dd/mm/yyyy'
+      });
+    });
+  </script>
+<% end %>
