--- a/app/views/shared/_navcard_tasks.html.erb
+++ b/app/views/shared/_navcard_tasks.html.erb
@@ -1,10 +1,27 @@
 <% @specialty.tasks.each do |t| %>
-  <div class="card">
-    <div class="card-description">
-      <p><%= link_to "#{t.name}" , project_specialty_task_path( @project, @specialty, t) %></p>
+  <div class="nav-card">
+    <div class="card-title">
+      <h2><%= link_to "#{t.name}" , project_specialty_task_path( @project, @specialty, t) %></h2>
       <p><%= t.start.strftime("%Y %b %d") %> - <%= t.finish.strftime("%Y %b %d") %></p>
     </div>
-    <img class="card-user" src="#">
+    <div class="card-avatars">
+      <ul class="list-inline">
+        <li>
+          <% unless t.user.nil? %>
+            <% if t.user.facebook_picture_url? %>
+              <% avatar_url = t.user.facebook_picture_url || "http://placehold.it/30x30" %>
+            <% elsif  t.user.photo.nil? %>
+              <% avatar_url = "http://placehold.it/30x30" %>
+            <% else %>
+              <%= avatar_url = cl_image_tag t.user.photo.path, height: 30, width: 30, :crop=>"fill" %>
+            <% end %>
+            <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <% end %>
+        </li>
+      </ul>
+    </div>
   </div>
 <% end %>
-
+ <div class="add-card">
+  <span><%= link_to "", new_project_specialty_task_path(@project, @specialty, @task), class:"fa fa-plus" %></span>
+</div>
