--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,11 +63,14 @@
       <h1> we're not shy. check out the buzz: </h1>
     </div>
   </div>
-  <div class="container" style="background-color: #9697AA">
-    <div class="product">
-      <div class='product-upvote'></div>
+
+  <!-- REVIEWS TABLE (FAKE but keep code in case someone wants to utilize it later) -->
+
+  <div class="container" style="background-color: #f7f2f2">
+    <div class="reviews-product">
+      <div class='reviews-product-upvote'></div>
       <img src='https://kitt.lewagon.com/placeholder/users/alex-felix' class="product-image"/>
-      <div class='product-body'>
+      <div class='reviews-product-body'>
         <h3>Dan, Contractor</h3>
         <p>Fantastic app! Gets it done day in, day out!</p>
       </div>
@@ -77,10 +80,10 @@
         <li><a href=""><i class="fa fa-star"></i></a>5</li>
       </ul>
     </div>
-    <div class="product">
-      <div class='product-upvote'></div>
+    <div class="reviews-product">
+      <div class='reviews-product-upvote'></div>
       <img src='https://kitt.lewagon.com/placeholder/users/ssaunier' class="product-image"/>
-      <div class='product-body'>
+      <div class='reviews-product-body'>
         <h3>Monique, Interior Design</h3>
         <p>So many clients, too little time—I'm sold—only wish I had known about this sooner!</p>
       </div>
@@ -90,10 +93,10 @@
         <li><a href=""><i class="fa fa-star"></i></a>5</li>
       </ul>
     </div>
-    <div class="product">
-      <div class='product-upvote'></div>
+    <div class="reviews-product">
+      <div class='reviews-product-upvote'></div>
       <img src='https://kitt.lewagon.com/placeholder/users/eschults' class="product-image"/>
-      <div class='product-body'>
+      <div class='reviews-product-body'>
         <h3>Sev, Homeowner</h3>
         <p>When wondering where we are on things, chances are #<i>Active</i>Blueprint already has the scoop. Plus, one click makes the guys on my project a call or text away. Sawoosh! </p>
       </div>
@@ -103,10 +106,10 @@
         <li><a href=""><i class="fa fa-star"></i></a>5</li>
       </ul>
     </div>
-    <div class="product">
-      <div class='product-upvote'></div>
+    <div class="reviews-product">
+      <div class='reviews-product-upvote'></div>
       <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="product-image"/>
-      <div class='product-body'>
+      <div class='reviews-product-body'>
         <h3>Rob, HVAC</h3>
         <p>Has my business for life... </p>
       </div>
