final tweaks to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,8 +59,8 @@
 
   <div class="banner-content">
     <div class="text-center" style="color: black" width="100">
-      <h3> tried-and-true </h3>
-      <h1> we're not shy. check out the buzz: </h1>
+      <h3> tried-and-true reviews | check out the buzz: </h3>
+      <p><i> — you weren't shy. alas, neither are we — </i></p>
     </div>
   </div>
 
