--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -16,8 +16,23 @@
     <%= f.input :budget, input_html: { placeholder: "", class: 'form-control' } %>
     <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
     <%= f.input :progress, input_html: { placeholder: " 35 (for 35%) -->minimum: 5  ", class: 'form-control' } %>
-            <%= f.input :start, as: :string, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
-        <%= f.input :finish, as: :string, input_html: { id: "end_date", placeholder: "", class: 'form-control datepicker' } %>
+    <div class="button-group" style="position: relative;">
+      <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+          Add Dependencies
+      </button>
+      <ul class="dropdown-menu" id="dependency-dropdown-menu">
+        <% Specialty.where("project_id = ? AND id != ?", @project.id, (@specialty.id || 9999)).each do |specialty| %>
+          <li>
+            <a href="#" class="small" data-value="<%= specialty.id %>" tabIndex="-1">
+              <input name="possible_dependencies[<%= specialty.id %>]" type="hidden" value="present">
+              <input name="dependencies[<%= specialty.id %>]" type="checkbox" <%= "checked" if @specialty.is_dependent_on.to_a.include?(specialty) %> /> <%= specialty.name %>
+            </a>
+          </li>
+        <% end %>
+      </ul>
+    </div>    
+    <%= f.input :start, as: :string, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
+    <%= f.input :finish, as: :string, input_html: { id: "end_date", placeholder: "", class: 'form-control datepicker' } %>
     <%= f.select :user, options_for_select(User.all.to_a.map { |obj| [obj['username'], obj['id']] }) %>
   </div>
   <div class="form-actions">
