Form styling, photo upload to new project & edit task, border shadowing on forms

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,6 +3,7 @@
   //margin-top: 20px;
   padding: 20px;
   border-radius: 5px;
+  box-shadow: 0px 2px 20px 0 rgba(0, 0, 0, 0.07), 0 1px 0 0 rgba(0, 0, 0, 0.03);
   h2 {
     text-align: left;
     font-weight: bold;
@@ -14,7 +15,8 @@
     width: 100%;
     padding: 10px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 15px;
   }
 }
 
@@ -79,6 +81,12 @@ abbr {
   }
 }
 
+#task_user {
+  width: 48% !important;
+  height: 40px !important;
+  margin: auto 0;
+}
+
 .project_address{
   margin-top: 10px;
 }
@@ -96,5 +104,5 @@ abbr {
 }
 
 .btn-default.dropdown-toggle {
-    background-color: #e6e6e6;
+  background-color: #e6e6e6;
 }
