--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,10 @@
-<div class="container col-xs-4">
-  <h2>Add a new task</h2>
-  <%= render 'form' %>
-  <%= link_to 'Back', project_specialty_path(@project, @specialty) %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="form-style">
+    <h1>Add a New Task</h1>
+    <%= render 'form' %>
+    <%= link_to 'Back', project_specialty_path(@project, @specialty) %>
+    </div>
+  </div>
 </div>
+
