--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -60,7 +60,7 @@
             <%= link_to "dashboard", projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
           </li>
           <li>
-            <%= link_to "start a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+            <%= link_to "new project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
           </li>
           <li>
             <%= link_to destroy_user_session_path, method: :delete do %>
