--- a/app/views/specialties/_form.html.erb
+++ b/app/views/specialties/_form.html.erb
@@ -14,8 +14,10 @@
         <%= f.input :name, input_html: { placeholder: "Plumbing, painting, electricity...", class: 'form-control' } %>
         <%= f.input :progress, input_html: { placeholder: " 35 (for 35%)  ", class: 'form-control' } %>
         <%= f.input :custom_class, collection: [ "blue", "red", "green", "orange", "grey", "brown", "violet", "yellow", "pink"], input_html: {  class: 'form-control' } %>
-        <%= f.input :start, as: :string, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
-        <%= f.input :finish, as: :string, input_html: { id: "end_date", placeholder: "", class: 'form-control datepicker' } %>
+        <div class="doublefields">
+          <%= f.input :start, as: :string, input_html: { id: "start_date",placeholder: "", class: 'form-control datepicker' } %>
+          <%= f.input :finish, as: :string, input_html: { id: "end_date", placeholder: "", class: 'form-control datepicker' } %>
+        </div>
         <div class="button-group" style="position: relative;">
           <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
               Add Dependencies
