--- a/app/views/specialties/edit.html.erb
+++ b/app/views/specialties/edit.html.erb
@@ -1,3 +1,8 @@
-<div class="container col-xs-6">
-  <%= render "form" %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="form-style">
+      <h1>Edit a Specialty</h1>
+      <%= render "form" %>
+    </div>
+  </div>
 </div>
