--- a/app/views/specialties/new.html.erb
+++ b/app/views/specialties/new.html.erb
@@ -1,8 +1,8 @@
- <div class="container-fluid centered">
+ <div class="container-fluid">
   <div class="row">
     <div class="form-style">
-      <h1>Add or Update a Specialty</h1>
-      <%= render "form" %>
+    <h1>Add a Specialty</h1>
+    <%= render "form" %>
     </div>
   </div>
 </div>
