--- a/app/views/specialties/show.html.erb
+++ b/app/views/specialties/show.html.erb
@@ -10,9 +10,10 @@
         <% end %>
       </p>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: <%= @specialty.progress %>;">
-          70%
+        <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+          <%= @specialty.progress %>%
         </div>
+        <script>document.querySelector(".progress-bar").style.width = "<%= @specialty.progress %>%";</script>
       </div>
     </div>
   </div>
