--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,23 +2,22 @@
   <div class="row">
     <div class="col-xs-12 head-section">
       <h1> <%= @project.title.upcase %> <%= link_to "", edit_project_path(@project), class:"fa fa-pencil" %> <%= link_to "", @project, class:'fa fa-trash', method: :delete %></h1>
-      <p> Starting on
-        <span><strong><%= @project.start_date.strftime("%b %d, %Y") %></strong></span>  and expected to finish on
-        <span><strong><%= @project.end_date.strftime("%b %d, %Y") %></strong></span>
+      <p>
+        <span><%= @project.start_date.strftime("%d %b %Y ") %></span> -
+        <span><%= @project.end_date.strftime("%d %b %Y ") %></span>
       </p>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-          <%= @project.total_progress %>%
+        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.total_progress %>;">
+          70%
         </div>
-        <script>document.querySelector(".progress-bar").style.width = "<%= @project.total_progress %>%";</script>
       </div>
     </div>
   </div>
-  <div class="row project-wrapper">
-    <div class="col-xs-12 col-sm-3 project-content-wrapper">
+  <div class="row">
+    <div class="col-xs-12 col-sm-3">
       <%= render "shared/navcard_specialties" %>
     </div>
-    <div class="col-xs-12 col-sm-9 project-content-wrapper">
+    <div class="col-xs-12 col-sm-9">
       <div class="gantt-container" style="overflow: scroll;">
         <svg id="gantt"></svg>
       </div>
