--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-xs-12 head-section">
       <h1> <%= @project.title.upcase %> <%= link_to "", edit_project_path(@project), class:"fa fa-pencil" %> <%= link_to "", @project, class:'fa fa-trash', method: :delete %></h1>
-      <p>
-        <span><%= @project.start_date.strftime("%d %b %Y ") %></span> -
-        <span><%= @project.end_date.strftime("%d %b %Y ") %></span>
+      <p> Starting on
+        <span><strong><%= @project.start_date.strftime("%b %d, %Y") %></strong></span>  and expected to finish on
+        <span><strong><%= @project.end_date.strftime("%b %d, %Y") %></strong></span>
       </p>
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.total_progress %>;">
