--- a/app/assets/stylesheets/pages/_show_project.scss
+++ b/app/assets/stylesheets/pages/_show_project.scss
@@ -1,7 +1,7 @@
 .main-container {
   margin-left: 20px;
   margin-right: 20px;
-  min-height: calc(100vh - 170px);
+  // min-height: calc(100vh - 170px);
 }
 
 .head-section {
