--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,9 +7,11 @@
         <span><strong><%= @project.end_date.strftime("%b %d, %Y") %></strong></span>
       </p>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.total_progress %>;">
-          70%
+        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+          <%= @project.total_progress %>%
         </div>
+        <script>document.querySelector(".progress-bar").style.width = "<%= @project.total_progress %>%";</script>
+      </div>
       </div>
     </div>
   </div>
