Button on home page

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,7 @@
   <div class="banner-content">
     <h1 class="text-center">the new frontier</h1>
     <h2 class="text-center">of project-management transparency</h2>
+      <%= link_to t(".sign_in", default: "sign up"), new_user_session_path, class: "btn btn-success"%>
   </div>
 </div>
 
